Điều chỉnh respone, field của các class